# silicontraffic

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
examples/data/cityflow/hangzhou/: cityflow.config
examples/data/sumo/MoST/: most.sumocfg
examples/scripts/: cityflow_test.py  sumo_test.py
silicontraffic/: __init__.py  abstract_traffic_env_engine.py  typing.py  vehicle.py
silicontraffic/monitor/: __init__.py  abstract_monitor.py  global_monitor.py  movements_monitor.py
silicontraffic/movement_modeling/: __init__.py  movement.py  movement_road_net.py  value_retrieval.py
silicontraffic/road_net/: __init__.py  road_net.py
silicontraffic/scityflow/: __init__.py  cityflow_road_net.py  silicon_cityflow_engine.py
silicontraffic/ssumo/: __init__.py  get_unique_port.py  silicon_sumo_engine.py  sumo_road_net.py
