[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silicontraffic"
version = "0.1.0"
description = "A unified traffic simulation environment interface for SUMO and CityFlow"
readme = "README.md"
authors = [
    { name = "IndexError", email = "indexguo@163.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
sumo = [
    "traci", "sumolib"
]
cityflow = [
    # CityFlow dependencies are typically installed separately
]

[project.urls]
"Homepage" = "https://github.com/SiliconSiliconGrass/silicontraffic"
"Repository" = "https://github.com/SiliconSiliconGrass/silicontraffic"
