[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9
packages = find:
include_package_data = True

[options.packages.find]
where = .

[options.extras_require]
sumo = 
cityflow = 

[options.entry_points]
# If you want to add command-line scripts, uncomment and modify the following:
# console_scripts =
#     silicontraffic = silicontraffic.cli:main
